@@ -1,3 +1,8 @@
+2004-02-10  Dodji Seketeli  <dodji@gnome.org>
+
+	* src/cr-fonts.c: debugged serialization stuffs
+	* src/cr-style.c: more serialization debugging
+	
 2004-02-08  dodji  <dodji@gnome.org>
 
 	* src/cr-style.c: more style structure debugging materials.
